# Testrail_MCP

./: CLAUDE.md  README.md  USER_GUIDE.md  mcp_config_example.json  pyproject.toml
docs/: RELEASE_CHECKLIST.md
src/: stdio.py
src/server/api/: __init__.py  access_control.py  attachments.py  cache_preload.py  shared_steps.py  tools.py
src/shared/schemas/: shared_steps.py
tests/: test_aliases.py  test_allowlist.py  test_attachments_validation.py  test_preload_cache.py  test_read_only.py
