[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testrail-mcp"
version = "2.2.0"
description = "MCP server connecting AI assistants to TestRail - 75 flat tools, server-side gates, attachment support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eden Fridman" }]
keywords = ["testrail", "mcp", "testing", "qa", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=0.9.0",
    "testrail-core==2.0.0",
]

# When building from the workspace, resolve the testrail-core dep from
# the local package rather than PyPI. uv honours this for `uv sync`,
# `uv run`, and editable installs; it has no effect on the published
# wheel's metadata, so PyPI consumers still pull the real 2.0.0 release.
[tool.uv.sources]
testrail-core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "mypy>=1.11",
]

[project.scripts]
testrail-mcp = "src.stdio:run"
testrail-mcp-install = "src.installer:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv workspace declaration. The root project ships `testrail-mcp` from
# `src/` (the MCP runtime — stdio entry, dispatcher, gates, handlers,
# server-side caches/preload/health/metrics; ADR-003 keeps these in the
# wrapper). The workspace member `packages/testrail-core/` ships the
# protocol-agnostic integration library and depends on nothing in src/.
[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict = false
# packages/testrail-{core,mcp}/tests/ are sibling test trees inside the uv
# workspace. Without explicit_package_bases, mypy reports "Duplicate module
# named 'tests'" when scanning the whole repo. Each package owns its own
# tests namespace; treating them as namespace packages keeps mypy happy.
explicit_package_bases = true
namespace_packages = true
